--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+datalist {
+  display: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -9,4 +13,42 @@
 body {
   background-color: #000;
   color: aliceblue;
+}
+
+.RadioContainer {
+  width: 1em;
+  height: 1em;
+  
+}
+
+.RadioContainer input{
+  display: none;
+  
+}
+
+.Radio__Radio{
+  width: 1em;
+  height: 1em;
+  border: 1px solid #444444;
+  border-radius: 50%;
+  margin-right: 10px;
+  box-sizing: border-box;
+  padding: 1.5px;
+  float: right;
+  float: left;
+}
+
+.Radio__Radio::after{
+    content: '';
+      width: 100%;
+      height: 100%;
+      display: block;
+      background-color: #1976D2;
+      border-radius: 50%;
+      transform: Scale(0);
+      float: right;
+}
+
+.RadioContainer input:checked + .Radio__Radio::after{
+  transform: scale(1);
 }
