--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 * {
   margin: 0;
@@ -9,7 +9,7 @@
 
 body {
   margin: 0;
-  font-family: 'Comfortaa', cursive;
+  font-family: 'DM Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -17,5 +17,5 @@ body {
 
 
 code {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'DM Sans', sans-serif;
 }
